--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ li {
   color:black
 }
 body {
-    background-image: url("http://theteachersdigest.com/6-ways-to-make-history-class-more-fun/");         
+    background-image: url("http://www.playmobil.us/shop-online/shop/history");         
 }
 </style>
 <body>
