--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ li {
   color:black
 }
 body {
-    background-image: url("http://www.playmobil.us/shop-online/shop/history");         
+    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQFOlRdQc-MDTwPsrcxrngeRUQKvj31p1X-7t19wAZQUOBufCHhXg");         
 }
 </style>
 <body>
