--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <title>History@stjosephsrush</title>
 <style>
 h1 {
-    text-shadow: 2px 2px 5px red;
+    color: white;
+    text-shadow: 2px 2px 4px blue;
 }
 ul {
     color: white;
