--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@ body {
     <li>revoulutions</li>
     <li>international relations in the 20th century</li> 
     <li>political development in the 20th century</li>
+    
+    <h1> The nature of history </h1>
+    <li> Being historically conscious means that you acquire a distictive way of seeing the world and you place in it. It also makes you aware of the change over the short and long term of history
 </ul>
 </body>
 </head>
