--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>History@stjosephsrush</title>
 <style>
+p.solid {border-style: solid;}
 h1 {
     color: white;
     text-shadow: 2px 2px 4px blue;
@@ -17,7 +18,7 @@ body {
 </style>
 <body>
 <h1>Topics studied in St Josephs Rush</h1>
-<ul>
+<ul class="solid">
     <li>Early Ireland (The roots in ancient civilisation, the neolithic period, The bronze age, the iron age
     <li>Ancient Rome</li>
     <li>The middle ages</li>
