--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 <title>History@stjosephsrush</title>
 <style>
-p.solid {border-style: solid;}
 h1 {
     color: white;
     text-shadow: 2px 2px 4px blue;
@@ -18,7 +17,7 @@ body {
 </style>
 <body>
 <h1>Topics studied in St Josephs Rush</h1>
-<ul class="solid">
+<ul>
     <li>Early Ireland (The roots in ancient civilisation, the neolithic period, The bronze age, the iron age
     <li>Ancient Rome</li>
     <li>The middle ages</li>
@@ -28,9 +27,13 @@ body {
     <li>international relations in the 20th century</li> 
     <li>political development in the 20th century</li>
     
-    <h1> The nature of history </h1>
-    <li> Being historically conscious means that you acquire a distictive way of seeing the world and you place in it. It also makes you aware of the change over the short and long term of history
-</ul>
+    <h1>Working with elements</h1>
+    <h3> During their time in Saint Josephs The student wil be able to </h3>
+    <li>How a pattern of settlement and plantasion influenced identity on the island of Ireland,referring to one example of a pattern of settlement, such as the growth of towns and plantasions. </li>
+    <li>Investigate the role and significance of two leaders involved in parliamentary tradition in Irish Population
+    
+ 
+    </ul>
 </body>
 </head>
 
