--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@ ul {
 body {
     background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQFOlRdQc-MDTwPsrcxrngeRUQKvj31p1X-7t19wAZQUOBufCHhXg");         
 }
+h1.double {border-style: double;}
 </style>
 <body>
-<h1>Topics studied in St Josephs Rush</h1>
+<h1 class="double" >Topics studied in St Josephs Rush</h1>
 <ul>
     <li>Early Ireland (The roots in ancient civilisation, the neolithic period, The bronze age, the iron age
     <li>Ancient Rome</li>
