--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@ body {
     background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQFOlRdQc-MDTwPsrcxrngeRUQKvj31p1X-7t19wAZQUOBufCHhXg");         
 }
 h1.double {border-style: double;}
+h1 {
+  font-size: 250%;
+}
+ul { 
+    font-size: 200%;
+}
 </style>
 <body>
 <h1 class="double" >Topics studied in St Josephs Rush</h1>
