add pics added info

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ ul {
     text-shadow: 2px 2px 4px blue;
 }
 body {
-    background-image: url("https://www.google.ie/search?rlz=1C1JPGB_enIE770IE770&biw=1280&bih=918&tbm=isch&sa=1&ei=-7WrWojsF6GSgAaA-ZDYBg&q=inside+pyramind+egypt&oq=inside+pyramind+egypt&gs_l=psy-ab.3..0i13k1j0i8i13i30k1l7.16371.17303.0.17742.7.7.0.0.0.0.94.385.7.7.0....0...1c.1.64.psy-ab..0.5.262....0.AJFGvVnYVpE#imgrc=EGagoTdk5MZiZM:");         
+    background-image: url("https://www.askideas.com/media/42/Mummy-Inside-The-Egyptian-Pyramid-Egypt.jpg");         
 }
 h1.double {border-style: double;}
 h1 {
@@ -36,7 +36,7 @@ ul {
     
     <h1>Working with elements</h1>
     <h3> During their time in Saint Josephs The student wil be able to </h3>
-    <li>How a pattern of settlement and plantasion influenced identity on the island of Ireland,referring to one example of a pattern of settlement, such as the growth of towns and plantasions. </li>
+    <li>Describe how a pattern of settlement and plantasion influenced identity on the island of Ireland,referring to one example of a pattern of settlement, such as the growth of towns and plantasions. </li>
     <li>Investigate the role and significance of two leaders involved in parliamentary tradition in Irish Population
     
  
