--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@ ul {
     <li>international relations in the 20th century</li> 
     <li>political development in the 20th century</li>
     
+    <img src="<img src="https://i.pinimg.com/originals/d8/d0/ab/d8d0ab5c0a400fe509f2e3ff19046334.jpg" alt="" width="460" height="345">
+    
     <h1>Working with elements</h1>
     <h3> During their time in Saint Josephs The student wil be able to </h3>
     <li>Describe how a pattern of settlement and plantasion influenced identity on the island of Ireland,referring to one example of a pattern of settlement, such as the growth of towns and plantasions. </li>
