--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ ul {
     
     <h1>Working with elements</h1>
     <h3> During their time in Saint Josephs The student wil be able to </h3>
-    <li>Describe how a pattern of settlement and plantasion influenced identity on the island of Ireland,referring to one example of a pattern of settlement, such as the growth of towns and plantasions. </li>
-    <li>Investigate the role and significance of two leaders involved in parliamentary tradition in Irish Population
+    <p>Describe how a pattern of settlement and plantasion influenced identity on the island of Ireland,referring to one example of a pattern of settlement, such as the growth of towns and plantasions. </p>
+    <p>Investigate the role and significance of two leaders involved in parliamentary tradition in Irish Population </p>
     
  
     </ul>
