--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@ ul {
     color: white;
     text-shadow: 2px 2px 4px blue;
 }
-
-          
-h1.double {border-style: double;}
 h1 {
   font-size: 250%;
 }
@@ -23,7 +20,7 @@ ul {
 }
 </style>
 <body>
-<h1 class="double">Topics studied in St Josephs Rush</h1>
+<h1>Topics studied in St Josephs Rush</h1>
 <ul>
     <li>Early Ireland (The roots in ancient civilisation, the neolithic period, The bronze age, the iron age
     <li>Ancient Rome</li>
