--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ ul {
 }
 </style>
 <body>
-<h1>Topics studied in St Josephs Rush</h1>
+<b><h1>Topics studied in St Josephs Rush</h1><b/>
 <ul>
     <li>Early Ireland (The roots in ancient civilisation, the neolithic period, The bronze age, the iron age
     <li>Ancient Rome</li>
