--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ ul {
 }
 </style>
 <body>
-<b><h1>Topics studied in St Josephs Rush</h1><b/>
+<i><h1>Topics studied in St Josephs Rush</h1><i/>
 <ul>
     <li>Early Ireland (The roots in ancient civilisation, the neolithic period, The bronze age, the iron age
     <li>Ancient Rome</li>
