--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@ ul {
 <i><h1>Topics studied in St Josephs Rush</h1><i/>
 <ul>
     <li>Early Ireland (The roots in ancient civilisation, the neolithic period, The bronze age, the iron age
-    <li>Ancient Rome</li>
+<p><a href="http://knowyourmeme.com/memes/trihard">Ancient Civilizations</a></p>
+
     <li>The middle ages</li>
     <li>the reaissance</li>
     <li>plantations</li>
