--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ ul {
 <body>
 <i><h1>Topics studied in St Josephs Rush</h1><i/>
 <ul>
-    <li>Early Ireland (The roots in ancient civilisation, the neolithic period, The bronze age, the iron age
+ <p><a href="html_images.asp">Early Ireland (The roots in ancient civilisation, the neolithic period, The bronze age, the iron age</a></p>
 <p><a href="http://knowyourmeme.com/memes/trihard">Ancient Civilizations</a></p>
 
     <li>The middle ages</li>
