--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@ ul {
 }
 </style>
 <body>
-<i><h1>Topics studied in St Josephs Rush</h1><i/>
+<i><h1>Topics studied in <p><a href="https://www.w3.org/">W3C</a>St Josephs Rush</h1><i/>
 <ul>
- <p><a href="html_images.asp">Early Ireland (The roots in ancient civilisation, the neolithic period, The bronze age, the iron age</a></p>
+ <p>Early Ireland (The roots in ancient civilisation, the neolithic period, The bronze age, the iron age</a></p>
 <p><a href="http://knowyourmeme.com/memes/trihard">Ancient Civilizations</a></p>
 
     <li>The middle ages</li>
