--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>History@stjosephsrush</title>
 <style>  
-    
+ background-image: url("http://blog.teamtreehouse.com/large-responsive-photo-backgrounds-in-web-design");    
     h1 {
     color: white;
     text-shadow: 2px 2px 4px blue;
@@ -23,7 +23,7 @@ ul {
 <i><h1>Topics studied in <p><a href="https://http://www.stjosephsrush.ie//">St Josephs Rush</a></h1><i/>
 <ul>
  <p>Early Ireland (The roots in ancient civilisation, the neolithic period, The bronze age, the iron age</a></p>
-<p><a href="http://knowyourmeme.com/memes/trihard">Ancient Civilizations</a></p>
+<p><a href=" ">Ancient Civilizations</a></p>
 
     <li>The middle ages</li>
     <li>the reaissance</li>
