--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@ h1 {
 ul { 
     font-size: 200%;
 }
-   background-image: url("http://blog.teamtreehouse.com/large-responsive-photo-backgrounds-in-web-design");   
+    </styles>
+    background-image: url("http://blog.teamtreehouse.com/large-responsive-photo-backgrounds-in-web-design");   
 <body> 
 <i><h1>Topics studied in <p><a href="https://http://www.stjosephsrush.ie//">St Josephs Rush</a></h1><i/>
 <ul>
@@ -48,7 +49,7 @@ ul {
     <br>historically-conscious students are mindful of how their environment has been shaped by people and events in the past and bring this historical sensibility to bear in their appreciation of human achievement.<br>
     <br>concepts such as viewpoint and objectivity, and cause and consequence, are also considered in this strand element.</br>
         
-   </style>   
+   
         
 <h6>Element Acquiring the big picture<h6>
 <p>The notion of the big picture relates to the idea of a usable historical framework that helps students see the past in a broad global context. 
