--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ h1 {
 ul { 
     font-size: 200%;
 }
-    </styles>
+    </style>
     background-image: url("http://blog.teamtreehouse.com/large-responsive-photo-backgrounds-in-web-design");   
 <body> 
 <i><h1>Topics studied in <p><a href="https://http://www.stjosephsrush.ie//">St Josephs Rush</a></h1><i/>
