--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@ h6 {
 <i><h1>Topics studied in <p><a ">St Josephs Rush</a></h1><i/>
 <ul>
  <p>Early Ireland (The roots in ancient civilisation, the neolithic period, The bronze age, the iron age</a></p>
-<p><a href=" ">Ancient Civilizations</a></p>
-
+    <li>Ancient Civilizations</li>
     <li>The middle ages</li>
     <li>the reaissance</li>
     <li>plantations</li>
