--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ h6 {
 <body> 
 <i><h1>Topics studied in <p><a ">St Josephs Rush</a></h1><i/>
 <ul>
- <p>Early Ireland (The roots in ancient civilisation, the neolithic period, The bronze age, the iron age</a></p>
+ <li>Early Ireland (The roots in ancient civilisation, the neolithic period, The bronze age, the iron age</li>
     <li>Ancient Civilizations</li>
     <li>The middle ages</li>
     <li>the reaissance</li>
