--- a/index.html
+++ b/index.html
@@ -26,11 +26,14 @@ h6 {
 <i><h1>Topics studied in <p><a ">St Josephs Rush</a></h1><i/>
 <ul>
  <li>Early Ireland (The roots in ancient civilisation, the neolithic period, The bronze age, the iron age</li>
-    <li>Ancient Civilizations</li>
+    <li>Ancient Civilizations (early ireland, ancient rome)</li>
     <li>The middle ages</li>
-    <li>the reaissance</li>
+    <li>Te reaissance (art, sculptures, architecture , science)</li>
+    <li>The age of exploration</li>
+    <li>The reformation</li>
     <li>plantations</li>
-    <li>revoulutions</li>
+    <li>revoulutions (anerican, french, irish</li>
+    <industrial revoulution</li>
     <li>international relations in the 20th century</li> 
     <li>political development in the 20th century</li>
     
