--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ h6 {
     <li>The age of exploration</li>
     <li>The reformation</li>
     <li>plantations</li>
-    <li>revoulutions (anerican, french, irish</li>
+    <li>revoulutions (anerican, french, irish)</li>
     <industrial revoulution</li>
     <li>international relations in the 20th century</li> 
     <li>political development in the 20th century</li>
