--- a/index.html
+++ b/index.html
@@ -113,11 +113,12 @@ h6 {
 }
    
 
-<body> 
+
    {
     background-image: url("https://wallpapertag.com/wallpaper/full/1/a/1/350829-widescreen-website-background-1920x1080-windows-xp.jpg");
 }
    </style>
+   </body>
 <i><h1>Topics studied in <p><a ">St Josephs Rush</a></h1><i/>
 <ul>
  <li>Early Ireland (The roots in ancient civilisation, the neolithic period, The bronze age, the iron age</li>
