--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@ h6 {
 <h3> Questions you may have about the schools history and books we use for the subject </h3>
 <p> The book we currently is use Timeline 2nd Edition heres a picture of it below </p>
 <img src="https://www.edco.ie/_fileupload/image/1_Timeline_Visuals_5_1_Pres_5.jpg_Thumbnail0.jpg"    
+<p> The book has 13 chapters each but some parts of the book such as the mesolithic age will not be used for the new junior cert</p>
  
     
 </ul>
